fixed nav bar spacing for icons

--- a/src/app/components/nav-bar/nav-bar-icon/nav-bar-icon.component.scss
+++ b/src/app/components/nav-bar/nav-bar-icon/nav-bar-icon.component.scss
@@ -6,10 +6,12 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   font-family: "Inter regular";
   font-size: 12px;
   line-height: 20px;
-  margin: 12px;
+  margin-top: 12px;
+  margin-bottom: 12px;
 }
 
 .svg-selector {
